docs: CQRS considerations